[gd_scene load_steps=28 format=3 uid="uid://b7n6qr4dq4pch"]

[ext_resource type="Script" path="res://scripts/options_menu.gd" id="1_7653n"]
[ext_resource type="Texture2D" uid="uid://dnk230h4ijlyl" path="res://assets/ui_etc/Titlescreencap.png" id="1_be8fa"]
[ext_resource type="FontFile" uid="uid://hn1l0bvh0i21" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="2_j3v3r"]
[ext_resource type="FontFile" uid="uid://dcdcvpqhh54cm" path="res://assets/fonts/bitbybit_ [Font].ttf" id="3_cag2w"]
[ext_resource type="Texture2D" uid="uid://cy351inmbmfn3" path="res://assets/ui_etc/tile_0673.png" id="5_26ojj"]
[ext_resource type="AudioStream" uid="uid://qut1qkp4my8j" path="res://assets/sounds/button processed.wav" id="5_qnakj"]
[ext_resource type="Texture2D" uid="uid://c7pc6sxdi8ye2" path="res://assets/ui_etc/tile_0716.png" id="7_kxxqt"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xs5yj"]
texture = ExtResource("1_be8fa")
modulate_color = Color(0.666569, 0.666569, 0.666569, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_adly5"]
bg_color = Color(0.984314, 0.768627, 0.105882, 1)
skew = Vector2(0.2, 0)
border_width_top = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
border_blend = true
expand_margin_left = 3.0
expand_margin_top = 3.0
expand_margin_right = 3.0
expand_margin_bottom = 3.0
shadow_color = Color(0, 0, 0, 1)
shadow_size = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g448x"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6jfd6"]
bg_color = Color(0.753863, 0.583287, 0.0249879, 1)
skew = Vector2(0.2, 0)
border_color = Color(0.984314, 0.768627, 0.105882, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0, 0, 0, 1)
shadow_size = 8
shadow_offset = Vector2(3, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d6o8a"]
bg_color = Color(0.412587, 0.314148, 0.0081919, 1)
skew = Vector2(0.2, 0)
border_color = Color(0.984314, 0.768627, 0.105882, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0, 0, 0, 1)
shadow_size = 8
shadow_offset = Vector2(3, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uoyog"]
bg_color = Color(0.984314, 0.768627, 0.105882, 1)
skew = Vector2(0.2, 0)
border_color = Color(0.984314, 0.768627, 0.105882, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0, 0, 0, 1)
shadow_size = 8
shadow_offset = Vector2(3, 3)

[sub_resource type="InputEventKey" id="InputEventKey_8m8ah"]
device = -1
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_me31p"]
events = [SubResource("InputEventKey_8m8ah")]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_agc4h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gax8w"]
bg_color = Color(0.287314, 0.3083, 0.378436, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.175627, 0.196102, 0.257686, 1)
corner_radius_top_left = 8
corner_radius_top_right = 5
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(3, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dotm5"]
bg_color = Color(0.187408, 0.202881, 0.258712, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(3, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1v6vh"]
bg_color = Color(0.454902, 0.470588, 0.537255, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.262745, 0.290196, 0.372549, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(3, 3)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cmkd0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a6cr2"]
bg_color = Color(0.287314, 0.3083, 0.378436, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.175627, 0.196102, 0.257686, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nju7t"]
bg_color = Color(0.187408, 0.202881, 0.258712, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.0639785, 0.0717101, 0.0996632, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k6kxm"]
bg_color = Color(0.454902, 0.470588, 0.537255, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.262745, 0.290196, 0.372549, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4234n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ixn4k"]
bg_color = Color(0.190321, 0.394703, 0.0937495, 1)
border_color = Color(0.984314, 0.768627, 0.105882, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_color = Color(0, 0, 0, 1)
shadow_size = 8
shadow_offset = Vector2(3, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ek6uv"]
bg_color = Color(0.243137, 0.537255, 0.282353, 1)
border_color = Color(0.984314, 0.768627, 0.105882, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_color = Color(0, 0, 0, 1)
shadow_size = 8
shadow_offset = Vector2(3, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rg20l"]
bg_color = Color(0.984314, 0.768627, 0.105882, 1)
draw_center = false
border_color = Color(0.984314, 0.768627, 0.105882, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_color = Color(0, 0, 0, 1)
shadow_size = 8
shadow_offset = Vector2(3, 3)

[node name="OptionsMenu" type="CanvasLayer"]
script = ExtResource("1_7653n")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxTexture_xs5yj")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -420.0
offset_right = 256.0
offset_bottom = -268.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 120

[node name="VolumeSlider" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/slider = SubResource("StyleBoxFlat_adly5")
min_value = -80.0
max_value = 0.0
rounded = true
tick_count = 5
ticks_on_borders = true

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VolumeSlider"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -102.0
offset_top = -56.0
offset_right = 102.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.34902, 0.701961, 0.176471, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 5
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("3_cag2w")
theme_override_font_sizes/font_size = 30
text = "Music Volume"
uppercase = true

[node name="MasterSlider" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/slider = SubResource("StyleBoxFlat_adly5")
min_value = -80.0
max_value = 10.0
rounded = true
tick_count = 5
ticks_on_borders = true

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MasterSlider"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -187.0
offset_top = -56.0
offset_right = 188.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.34902, 0.701961, 0.176471, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 5
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("3_cag2w")
theme_override_font_sizes/font_size = 30
text = "Master Volume"
uppercase = true

[node name="BackMarginContainer" type="MarginContainer" parent="."]
offset_left = 32.0
offset_top = 32.0
offset_right = 210.0
offset_bottom = 104.0

[node name="Back" type="Button" parent="BackMarginContainer"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_j3v3r")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_g448x")
theme_override_styles/hover = SubResource("StyleBoxFlat_6jfd6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_d6o8a")
theme_override_styles/normal = SubResource("StyleBoxFlat_uoyog")
shortcut = SubResource("Shortcut_me31p")
shortcut_in_tooltip = false
text = "< Back"

[node name="ResetContainer" type="MarginContainer" parent="."]
visible = false
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -152.0
offset_top = 24.0
offset_right = -40.0
offset_bottom = 136.0
grow_horizontal = 0

[node name="ResetLevel" type="Button" parent="ResetContainer"]
layout_mode = 2
tooltip_text = "Resets the level (timer, coins, etc)"
theme_override_colors/icon_pressed_color = Color(0.226707, 0.226707, 0.226707, 1)
theme_override_fonts/font = ExtResource("2_j3v3r")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_agc4h")
theme_override_styles/hover = SubResource("StyleBoxFlat_gax8w")
theme_override_styles/pressed = SubResource("StyleBoxFlat_dotm5")
theme_override_styles/normal = SubResource("StyleBoxFlat_1v6vh")
shortcut = SubResource("Shortcut_me31p")
shortcut_in_tooltip = false
icon = ExtResource("5_26ojj")
icon_alignment = 1
vertical_icon_alignment = 2
expand_icon = true

[node name="Label" type="Label" parent="ResetContainer/ResetLevel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -78.0
offset_top = 8.0
offset_right = 87.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 0.741176, 0.12549, 1)
theme_override_colors/font_outline_color = Color(0.262745, 0.290196, 0.372549, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 16
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("3_cag2w")
theme_override_font_sizes/font_size = 30
text = "Reset"
uppercase = true

[node name="MainMenuContainer" type="MarginContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.5
offset_top = 124.0
offset_right = 140.5
offset_bottom = 188.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainMenu" type="Button" parent="MainMenuContainer"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0.163925, 0.177968, 0.228664, 1)
theme_override_colors/icon_hover_color = Color(0.341176, 0.364706, 0.443137, 1)
theme_override_fonts/font = ExtResource("2_j3v3r")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_cmkd0")
theme_override_styles/hover = SubResource("StyleBoxFlat_a6cr2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nju7t")
theme_override_styles/normal = SubResource("StyleBoxFlat_k6kxm")
shortcut = SubResource("Shortcut_me31p")
shortcut_in_tooltip = false
text = "Main Menu"
icon = ExtResource("7_kxxqt")
expand_icon = true

[node name="FullscreenContainer" type="MarginContainer" parent="."]
visible = false
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -512.0
offset_top = 448.0
offset_right = -128.0
offset_bottom = 576.0
grow_horizontal = 0
mouse_filter = 2

[node name="FullscreenCheckbox" type="Button" parent="FullscreenContainer"]
visible = false
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_hover_color = Color(0.662745, 0.694118, 0.682353, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_cag2w")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_4234n")
theme_override_styles/hover = SubResource("StyleBoxFlat_ixn4k")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ek6uv")
theme_override_styles/normal = SubResource("StyleBoxFlat_rg20l")
toggle_mode = true
text = "FULLSCREEN"

[node name="Button Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_qnakj")
volume_db = 1.0
pitch_scale = 1.3
attenuation = 1e-05
panning_strength = 0.0
bus = &"SFX"

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/VolumeSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="pressed" from="BackMarginContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="ResetContainer/ResetLevel" to="." method="_on_reset_level_pressed"]
[connection signal="pressed" from="MainMenuContainer/MainMenu" to="." method="_on_main_menu_pressed"]
